--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,20 @@
 .App {
   text-align: center;
+  font-size: 18pt;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.form-name, .form-email {
+    padding: 5px;
+    margin: 2px;
+}
+.buttonClass {
+    background-color: darkred;
+    padding: 7px;
+    margin: 4px;
+}
+.buttonClass:hover {
+    cursor: pointer;
+    color: white;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
 
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
